# radar-camera-fusion

./: .gitignore  CMakeLists.txt  CMakeSettings.json  README.md
include/: camera_detector.hpp  csrt_tracker.hpp  detection_types.hpp  fusion_manager.hpp  fusion_types.hpp  kalman_filter_2d.hpp  kalman_multi_tracker.hpp  kalman_track.hpp  motion_detector.hpp  radar_simulator.hpp  radar_types.hpp  simple_tracker.hpp  track_types.hpp  yolo_detector.hpp
src/: camera_detector.cpp  csrt_tracker.cpp  fusion_manager.cpp  kalman_filter_2d.cpp  kalman_multi_tracker.cpp  main.cpp  motion_detector.cpp  radar_simulator.cpp  simple_tracker.cpp  yolo_detector.cpp
